# AudioDeck

./: .gitignore  CLI_USAGE.md  DEVELOPMENT_QUICKSTART.md  DEVELOPMENT_README.md  QUICKSTART.md  README.md  build_exe.py  create_all_files.py  create_application_layer.py  create_presentation_layer.py  create_remaining_files.py  launch_audio_deck.bat  pyproject.toml  requirements-dev.txt  requirements.txt
examples/streamdeck_profiles/: README.md  gaming_profile.bat  music_profile.bat  work_profile.bat
src/: __init__.py  main.py
src/application/: __init__.py
src/application/dtos/: __init__.py  device_dto.py  profile_dto.py
src/application/use_cases/: __init__.py  create_profile_use_case.py  delete_profile_use_case.py  get_devices_use_case.py  get_profiles_use_case.py  switch_profile_use_case.py  update_profile_use_case.py
src/cli/: __init__.py  argument_parser.py  cli_handler.py
src/domain/entities/: __init__.py  audio_device.py  audio_profile.py
src/domain/exceptions/: __init__.py  domain_exceptions.py
src/domain/interfaces/: __init__.py  device_controller.py  device_repository.py  profile_repository.py
src/domain/value_objects/: __init__.py  device_type.py
src/infrastructure/persistence/: json_profile_repository.py
src/infrastructure/windows/: __init__.py  device_enumerator.py  windows_device_controller.py  windows_device_repository.py
src/presentation/: __init__.py
src/presentation/presenters/: __init__.py  actuation_presenter.py  configuration_presenter.py
src/presentation/views/: __init__.py  actuation_view.py  configuration_view.py  main_window.py
